app/stylesheets/main.sass
/* Main css file for Pixie.
  Copyright STRd6 2010

@import constants
@import icon

// Basic layout and font styles
body
  background-color: white
  
h1, h2, h3, h4, h5, h6
  color = !main_color
  font-family: 'Josefin Sans Std Light', Arial, serif
  letter-spacing: .1em

.border
  border: 1px solid #BBB

// Grid container
.container
  margin: 0
  margin-left = $blueprint-grid-margin

#sidebar
  float: left
  margin-right = $blueprint-grid-margin
  +grid-width(4)

  #logo
    height: 70px
    position: relative
  
    #logo_type
      bottom: 0
      color = !main_color
      font-size: 24pt
      height: 30pt
      letter-spacing: .25em
      position: absolute
      text-align: center
      width: 100%
      a
        text-decoration: none
        &:visited
          color: inherit
    
  #description
    color = !light_gray
    font-size: 8pt
    font-style: italic
    letter-spacing: .1em
    margin-top: 2em
    //padding-left = $blueprint-grid-width / 2
    text-align: justify

#header 
  float: left
  height= ($blueprint-grid-width + $blueprint-grid-margin) * 2 - $blueprint-grid-margin
  +grid-width(20)
  
  a
    padding: 0
    color: inherit
    text-decoration: none
    
  // Apply to all header links (navigation and log in link)
  a
    +box-sizing(border-box)
    color = !dark_gray
    display: inline-block
    height: 100%
    margin: 0
    padding: 0
    padding-top: 48px
    text-align: center
    
  #nav
    border-left = 1px solid !dark_gray
    +box-sizing(border-box)
    height: 100%
    
    a
      display: inline-block
      font-weight: bold
      text-align: left
      text-decoration: none
      width: 100%
      &:hover
        border-bottom = 4px solid !dark_gray
      
  #login_link
    text-align: center
    a
      text-decoration: underline
      &:hover
        text-decoration: none
  
#content
  border-top = 1px solid !dark_gray
  border-right = 1px solid !dark_gray
  +box-sizing(border-box)
  padding-top: 2em
  
  p
    font-family: Verdana, sans-serif
    font-size: 12px
    letter-spacing: .5px
    line-height: 18px
  
#footer
  margin-top: 2em
  
  center
    height: 3em

// Forms - move into separate file?
form
  label
    display: inline-block
    font-family: Verdana, sans-serif
    margin-right = $blueprint-grid-margin
    text-align: right
    +grid-width(4)

  input[type=text], input[type=password]
    border-width: 2px
    +grid-width(8)
    &:focus
      border-width: 2px
      border-color: !main_color

  input[type=button], input[type=submit]
    display: block
    margin-top: 1em
    margin-left: ($blueprint-grid-width + $blueprint-grid-margin) * 4

  input[type=radio], input[type=checkbox]
    display: inline-block
    +grid-width(1)
    margin = 0 $blueprint-grid-margin 0 0

  input[disabled]
    background-color: #efefef
  
// Custom log in page spacing
#user_session_password
  +grid-width(7)
  
#forgot_password_link
  color: black
  display: block
  font-size: .8em
  margin-left = $blueprint-grid-width * 7
  &:hover
    text-decoration: none

// TODO: Good these up, embetter and embiggen
// Error and notice styling
.notification
  padding: 4px
  border-style: groove double
  margin-bottom: 8px
  width: 70%

#notice
  color= !p1
  border-color= !main_color
  background-color= !s2

#error
  color= !error_color
  border-color= !error_color
  background-color= !s2

#errorExplanation, .errorExplanation
  color= !error_color

// Specifics
.chunk
  width: 20em
  float: left
  margin-right: 2em
  margin-bottom: 2em
  padding: 0.5em
  background-color: #8FBC8F

div.star
  background-image: url(../images/icons/star.png)
  width: 16px
  height: 16px

div.no-star
  background-image: url(../images/icons/star_empty.png)
  width: 16px
  height: 16px

.avatar
  padding: 8px

.round
  +border-radius(5px)

